updated footer to absolute, added blue h2 bar

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         <p class=""><strong>Lorem ipsum</strong>, dolor sit amet consectetur adipisicing elit. Nam tempora cum ea asperiores delectus, illo, quas laborum modi eos placeat distinctio enim quasi adipisci provident consectetur atque fugiat aspernatur necessitatibus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt natus nostrum corrupti ducimus aperiam dolorem dolore fuga possimus similique eius totam repellat, ipsam vitae repellendus, sint eaque voluptates. Nobis, doloremque?
           <br>
         <strong>Lorem ipsum</strong> dolor sit amet, consectetur adipisicing elit. Odio facilis temporibus laudantium magnam quibusdam, eius nemo at beatae incidunt, perferendis eum adipisci est voluptatem voluptatibus tenetur aliquam dolore repudiandae veniam! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, eos? Impedit officia dolor doloribus amet optio possimus maxime ipsa nesciunt praesentium earum rem vitae reprehenderit odit, quidem voluptate libero dicta.</p>
+
+        
     </article>
 
     <aside class="aside-container">
       <img src="//placehold.it/200x100" alt="placeholder">
       <h4>Another article</h4>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit eum optio quibusdam quam, totam sed voluptatibus amet sunt est voluptate alias quaerat, labore omnis hic iste accusantium et, pariatur eos.</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
     </aside>
 
     </main>
